--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     </header>
     <div class="jumbotron jumbotron-fluid">
         <div class="container" >
-            <h1 class="display-4"style="font-size:50px; font-weight: bold; text-align:center">Moosen.im</h1>
-            <p class="lead"style="font-size:20px; text-align:center">Fun, Customizable Communication Application</p>
+            <h1 class="display-4"style="font-size:50px; font-weight: bold; text-align:center">Nick Beeson</h1>
+            <p class="lead"style="font-size:20px; text-align:center">Full Stack Web Developer</p>
         </div>
     </div>
 
