--- a/About.html
+++ b/About.html
@@ -40,7 +40,7 @@
             <a class="nav-link active" href="About.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Blog</a>
+            <a class="nav-link" href="blog.html">Blog</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Contact</a>
