--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 
         </div>
 
-        <div class="parallax" style="">
+        <div style="z-index:2;">
 
             <div class='blog' style="background: rgba(200, 200, 200, -1);">
                 <div class="media" style="text-align:center; justify-content: center; float:center; margin-top: 10px; background: rgba(200, 200, 200, -1);">
@@ -254,7 +254,7 @@
                                 <div class="card" style="width: 10rem;" href="#">
                                     <img class="card-img-top" style="width: 10rem;" src="https://cdn1.iconfinder.com/data/icons/logotypes/32/square-linkedin-512.png" alt="Card image cap">
                                     <div class="card-body">
-                                        <h5 class="card-title">Linedin</h5>
+                                        <h5 class="card-title">Linkedin</h5>
                                         <a href="#" class="btn btn-primary">Go somewhere</a>
                                     </div>
                                 </div>
@@ -262,9 +262,9 @@
                         </div>
                         <div class="col-sm">
                             <div class="card" style="width: 10rem;" href="#">
-                                <img class="card-img-top" style="width: 10rem;" src="https://moosen.im/uploads/moosenim4ColoredFilled.jpg" alt="Card image cap">
+                                <img class="card-img-top" style="width: 10rem;" src="https://cdn.pixabay.com/photo/2017/08/23/11/30/youtube-2672571_960_720.jpg" alt="Card image cap">
                                 <div class="card-body">
-                                    <h5 class="card-title">Moosen im</h5>
+                                    <h5 class="card-title">Youtube</h5>
                                     <a href="#" class="btn btn-primary">Go somewhere</a>
                                 </div>
                             </div>
@@ -274,21 +274,25 @@
 
 
             </div>
+
             <div class="media" class='blog' style="">
                 <img class="align-self-center mr-3" src="http://via.placeholder.com/300.png/09f/fff" alt="Generic placeholder image">
                 <div class="media-body" style="">
-                    <h5 class="mt-0">Features</h5> Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue
-                    felis in faucibus.
+                    <h5 class="mt-0">Welcome</h5> This webpage is the go-to resource for all things Nick Beeson. I am a web applications programmer first, but
+                    I also have a passion for video game development. I have done a lot of work with VR, making everything from 3rd-person platformers to weird networking tools in Virtual
+                    Reality. In my About page, learn more about past porojects, or check out my blog for updatyes on my latest disasters.
                 </div>
 
             </div>
             <div class="media" id='blog'>
                 <div class="media-body">
                     <p>
-                        <h5 class="mt-0">Features2</h5> Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+                        <h5 class="mt-0"><h1>Current Big Project</h1> Currently, My friend and I have been working on a new instant messaging service, <a href="moosen.im">moosen im</a>.
+                        So far, the app is free to use for the public, but is still in early development. It currently features Oauth authentication, customizable room themes, custom commands, and custom emojis.
+                        I've had a lot of fun working on it, and for more information about the project, I'll post updates to my blog.
                     </p>
                 </div>
-                <img class="align-self-center mr-3" src="http://via.placeholder.com/300.png/09f/fff" alt="Generic placeholder image">
+                <img class="align-self-center mr-3" src="https://moosen.im/uploads/moosenlogo1.png" style ="height:300px; width:300px;">
 
             </div>
 
@@ -319,7 +323,7 @@
                                 <div class="card" style="width: 10rem;" href="#">
                                     <img class="card-img-top" style="width: 10rem;" src="https://cdn1.iconfinder.com/data/icons/logotypes/32/square-linkedin-512.png" alt="Card image cap">
                                     <div class="card-body">
-                                        <h5 class="card-title">Linedin</h5>
+                                        <h5 class="card-title">Linkedin</h5>
                                         <a href="#" class="btn btn-primary">Go somewhere</a>
                                     </div>
                                 </div>
@@ -338,8 +342,8 @@
                 </div>
                 <div class="media" id='blog'>
                     <div class="media-body" style="text-align:center">
-                        <h5 class="mt-0">Why Use Moosen?<h5>
-            
+                        <h5 class="mt-0">Nick Beeson - nbeeson@moosen.im<h5>
+
           </div>
       </div>
     </div>
