--- a/About.html
+++ b/About.html
@@ -66,12 +66,18 @@
         <div class="media" id='blog'>
             <div class="media-body">
                 <p>
-                <h5 class="mt-0">Features2</h5>
-                 Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+                <h5 class="mt-0">Biography</h5>
+                Nick Beeson began writing code junior year of high school, in his bedroom directly after prom where he wrote his first game for a 48-hour game jam competition. During high school, he was part of the VEX robotics club and won state with the team once, and wrote several small games for other game jams. Overall, he has produced 10+ games from weekend competitions.
+
+                 During his time at the University of Denver, he founded the annual independent game expo, “DU Arcade”, now in its third year. DU Arcade is the largest event of its kind in the state, and has drawn crowds upwards of 250 people. The expo has given students the opportunity to show off their projects alongside professional developers and their games.
+
+                Nick Beeson also worked for GX2 Technology, a networking solutions firm on the hospitality industry, for 2 years. During his time there, he picked up very useful skills such as advanced network troubleshooting, setting up large networks, customer support ticketing, as well as programming in the .Net framework. He worked both part-time and full time, including countless early morning weekend shifts.
+
+                	Nick graduates with a Bachelors of Arts degree in Applied Computing and a minor in Business administration. he has begun to form strong business foundations, with the goal of launching his first startup, centered around a flagship messaging application.
+
              </p>
             </div>
-            <img class="align-self-center mr-3" src="http://via.placeholder.com/300.png/09f/fff" alt="Generic placeholder image">
-
+        
         </div>
 
     <div>
