--- a/index.html
+++ b/index.html
@@ -253,23 +253,26 @@
                             </a>
                             </div>
                             <div class="col-sm">
+                                <a href="https://github.com/TaterHater" class="btn btn-primary">
                                 <div class="card" style="width: 10rem;" href="#">
                                     <img class="card-img-top" style="width: 10rem;" src="https://cdn1.iconfinder.com/data/icons/logotypes/32/square-linkedin-512.png" alt="Card image cap">
                                     <div class="card-body">
                                         <h5 class="card-title">Linkedin</h5>
                                         <a href="#" class="btn btn-primary">Go somewhere</a>
                                     </div>
-                                </div>
+                                </div></a>
                             </div>
                         </div>
                         <div class="col-sm">
-                            <div class="card" style="width: 10rem;" href="#">
-                                <img class="card-img-top" style="width: 10rem;" src="https://cdn.pixabay.com/photo/2017/08/23/11/30/youtube-2672571_960_720.jpg" alt="Card image cap">
+                            <a href="https://www.youtube.com/channel/UCDd6qq6QtrJSuVAUQ-0xXiA?view_as=subscriber" class="btn btn-primary">
+                            <div class="card" style="width: 10rem;" href="https://www.youtube.com/channel/UCDd6qq6QtrJSuVAUQ-0xXiA?view_as=subscriber">
+                                <img class="card-img-top" style="width: 10rem;" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ3RU3coojdV3XJs_0UWLFCpfI0Iq9BpG_Q-K4H2mA1Y9mBHOX7ug" alt="Card image cap">
                                 <div class="card-body">
                                     <h5 class="card-title">Youtube</h5>
                                     <a href="#" class="btn btn-primary">Go somewhere</a>
                                 </div>
                             </div>
+                        </a>
                         </div>
                     </div>
                 </div>
