--- a/About.html
+++ b/About.html
@@ -57,7 +57,7 @@
         <div class="media" class='blog' style="">
             <img class="align-self-center mr-3" src="http://via.placeholder.com/300.png/09f/fff" alt="Generic placeholder image">
             <div class="media-body" style="">
-                <h5 class="mt-0">Resumme</h5> <form method="get" action="Beeson.Nick.Resume.pdf">
+                <h5 class="mt-0">Resume</h5> <form method="get" action="Beeson.Nick.Resume.pdf">
    <button type="submit">Download my resume</button>
 </form>
             </div>
