--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                 <img class="align-self-center mr-3" src="http://via.placeholder.com/300.png/09f/fff" alt="Generic placeholder image">
                 <div class="media-body" style="">
                     <h1>Welcome</h1> This webpage is the go-to resource for all things Nick Beeson. I am a web applications programmer first, but I also have a passion for video game development. I have done a lot of work with VR, making everything from 3rd-person platformers
-                    to weird networking tools in Virtual Reality. In my About page, learn more about past porojects, or check out my blog for updatyes on my latest disasters.
+                    to weird networking tools in Virtual Reality. In my About page, learn more about past porojects, or check out my blog for updates on my latest disasters.
                 </div>
 
             </div>
